# PlotCFTS

./: .gitignore  CMakeLists.txt  README.md  build-all.bat  build.cmd  build_msvc.cmd  build_ucrt64.cmd  dispatch_plotcfts.bat  plot_cf_time_series.sln  plot_cf_time_series.vcxproj  sonar-project.properties
.github/workflows/: build.yml
doc/: plot_ugrid.uxf  plotcfts_um.tex  uml_qgis_his_cf.uxf
include/: plot_cf_time_series_version.h.cvs  plot_cf_time_series_version.h.svn  plot_cf_time_series_version.rc.cvs  plot_cf_time_series_version.rc.svn  time_series_plot.h
scripts/: git_insert_hash.cmd  git_insert_hash.ps1
src/: cf_timeseries.cpp  main.cpp  mainwindow.cpp  plot_cf_time_series_version.cpp
